# ADS1230

./: CMakeLists.txt  README.md  ads1230.cpp  ads1230.h  loadcell.cpp  loadcell.h
